--- a/src/pages/Frame.module.css
+++ b/src/pages/Frame.module.css
@@ -111,51 +111,50 @@
   min-width: 46px;
   white-space: nowrap;
 }
-.account,
-.links {
-  flex-direction: row;
-  justify-content: flex-start;
-}
 .account {
   margin: 0;
   flex: 1;
-  display: flex;
-  align-items: flex-start;
+  flex-direction: row;
   gap: var(--gap-9xs);
   text-align: left;
   font-size: var(--font-size-xs);
   color: var(--gray-scale-gray-300);
   font-family: var(--body-small-body-small-400);
 }
-.links {
-  align-self: stretch;
-  gap: 19.7px;
-}
+.account,
 .links,
-.linksWrapper,
-.smallOne {
+.linksWrapper {
   display: flex;
   align-items: flex-start;
+  justify-content: flex-start;
+}
+.links {
+  align-self: stretch;
+  flex-direction: row;
+  gap: 19.7px;
 }
 .linksWrapper {
   width: 232px;
   flex-direction: column;
-  justify-content: flex-start;
   padding: var(--padding-12xs) 0 0;
   box-sizing: border-box;
   text-align: center;
 }
+.navigation,
 .smallOne {
   align-self: stretch;
+  align-items: flex-start;
+}
+.smallOne {
   background-color: var(--gray-scale-gray-800);
   box-shadow: 0 1px 0#e6e6e6;
+  display: flex;
   flex-direction: row;
   justify-content: center;
   padding: 12px var(--padding-xl);
   gap: 773px;
 }
 .navigation {
-  align-self: stretch;
   background-color: var(--gray-scale-white);
   max-width: 100%;
   text-align: left;
@@ -168,11 +167,11 @@
 .navigation {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   justify-content: flex-start;
 }
 .footer {
   align-self: stretch;
+  align-items: flex-start;
   max-width: 100%;
 }
 .dataHub {
@@ -180,6 +179,7 @@
   position: relative;
   background-color: var(--gray-scale-white);
   overflow: hidden;
+  align-items: flex-end;
   letter-spacing: normal;
 }
 @media screen and (max-width: 1350px) {
